# SOCrates

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/scripts/: run_pipeline.sh  run_tier1.sh  run_tier2.sh
backend/src/socrates/: config.py  db.py  main.py
backend/src/socrates.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/socrates/api/: analysis.py  auth.py
backend/src/socrates/data_generator/: anomaly_injector.py  company_profile.py  config.yaml  exporter.py  generate.py  normal_traffic.py
backend/src/socrates/evaluation/: README.md  evaluate_tier1.py  evaluate_tier2.py
backend/src/socrates/ml/: feature_engineering.py  train.py
backend/src/socrates/services/: parser.py  pipeline.py  tier1_rules.py  tier2_ml.py  tier3_agent.py
data/: explore.ipynb  ground_truth.csv
frontend/app/: globals.css  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/lib/: api.ts
